--- a/Enfoca/Features/Edit/Edit.storyboard
+++ b/Enfoca/Features/Edit/Edit.storyboard
@@ -405,9 +405,9 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="jIs-jA-6b1" firstAttribute="top" secondItem="VHe-cH-hKb" secondAttribute="bottom" constant="8" id="0qO-Pr-YRj"/>
                             <constraint firstItem="JAn-nV-NMZ" firstAttribute="top" secondItem="DlH-BQ-Hai" secondAttribute="top" id="540-ul-XYm"/>
                             <constraint firstAttribute="trailing" secondItem="JAn-nV-NMZ" secondAttribute="trailing" id="BaC-Q4-9Ty"/>
+                            <constraint firstItem="jIs-jA-6b1" firstAttribute="top" secondItem="VHe-cH-hKb" secondAttribute="bottom" constant="8" id="MIe-9U-Leb"/>
                             <constraint firstAttribute="trailing" secondItem="VHe-cH-hKb" secondAttribute="trailing" constant="8" id="TMD-kM-beT"/>
                             <constraint firstItem="VHe-cH-hKb" firstAttribute="top" secondItem="JAn-nV-NMZ" secondAttribute="bottom" constant="8" id="aWn-sN-Xrh"/>
                             <constraint firstItem="JAn-nV-NMZ" firstAttribute="leading" secondItem="DlH-BQ-Hai" secondAttribute="leading" id="nkU-vd-fu1"/>
