Language choice now works in search!

--- a/Enfoca/Features/Home/Home.storyboard
+++ b/Enfoca/Features/Home/Home.storyboard
@@ -110,7 +110,7 @@
                                     <outletCollection property="gestureRecognizers" destination="fIp-64-eD2" appends="YES" id="QG8-xS-jdg"/>
                                 </connections>
                             </view>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Search or Create" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JBS-ce-c80">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Search or Create" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JBS-ce-c80" customClass="MultiLingualTextField" customModule="Data_Import" customModuleProvider="target">
                                 <rect key="frame" x="10" y="65" width="306" height="50"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="tintColor" red="0.99989169840000003" green="1" blue="0.99988096950000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
